crates/test-files/fixtures/compile_errors/const_assign.fe
const MODULE: i32 = 10

contract FOO {
    fn assign_to_global_const() {
        MODULE = 1
    }

    fn assign_to_local_const() {
        const LOCAL: i32 = 10
        LOCAL = 1
    }
}
